--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,17 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="bottomTitle">리뷰가 도움이 됐나요?</string>
+    <string name="plus_caution">
+        - 천연가죽 및 모피, 카페트의 경우 전문가와 제휴를 통해 세탁이 진행되기 때문에\n
+평균 세탁기간이 2주정도 소요되고 있습니다. 꼭 넉넉하게 시간을 두고 맡겨주세요.\n\n
+
+- 건조시간 등의 사유로 세탁기간이 더 필요한 품목이 발생할 수 있습니다.\n
+이 경우 사전 알림을 보내드린 후 다음날 따로 배송되오니 걱정마세요.\n\n
+
+- 맡기기 전 악세사리 는 제거하고 주머니 속 소지품도 꼭 점검해주세요.\n
+이 외에도 더 궁금하신 사항 있으시면 [마이세특]-[고객센터]를 통해 문의해주세요. \n친절히 답변 드릴게요.\n\n
+
+- 고객센터 운영시간\n
+월-일 08:00~24:00 (점심시간 12:00~13:00)\n
+    </string>
 </resources>
